@@ -8,5 +8,6 @@ pm_to_blib
 *.bak
 *.old
 *.gz
+.build
 .prove
 inc/
